<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StudyHelper</string>
    <string name="StudyHelper">StudyHelper</string>
    <string name="Control_your_grades">Control your grades</string>
    <string name="Subjects">Subjects</string>
    <string name="SubjectList">Subjects List</string>
    <string name="NotesList">Notes List</string>
    <string name="To_do">To do</string>
    <string name="Help">Help</string>
    <string name="no_subjects">Currently you have no subjects</string>
    <string name="no_notes">Currently you have no notes</string>
	<string name="Average">Average</string>
	<string name="erase_subject">Erase the selected subject</string>
	<string name="Exam">Exam</string>
	<string name="existing_subject">There is already a subject with the name :</string>
	<string name="incomplete_subject_form">All fields of the form must be filled</string>
	<string name="Grade">Grade</string>
	<string name="Weight">Weight</string>
	<string name="Your_grade">Your grade:</string>
	<string name="incorrect_weight">The current weight do not add to a 100%, please check if there was no mistake entering the data</string>
	<string name="incorrect_weight_range">Weight must be a value between 0 and 100 or a valid expression</string>
	<string name="incorrect_grade_range">Grade must be a value between 0 and 10</string>
	<string name="incorrect_day">The day must be in the format 01-01-2001</string>
	<string name="name_of_the_subject">Name of the subject</string>
	<string name="number_of_exams">Number of exams</string>
	<string name="add">Add</string>
	<string name="Name">Name</string>
	<string name="Weight_in_">Weight in %</string>
	<string name="In_percentage">In percentage (Eg: 50)</string>
	<string name="Day">Day</string>
	<string name="Save">Save</string>
	<string name="date_example">01-01-2001</string>
	<string name="New_note">New note</string>
	<string name="Delete_note">Delete note</string>
	<string name="Edit_note">Edit note</string>
	<string name="Note">Note</string>
	<string name="Title">Title</string>
	<string name="Body">Body</string>
	<string name="Add_a_subject">Add a subject</string>
</resources>