<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="10dp"
    >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/exam_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"/>
            
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Grade"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/exam_grade"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"  />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Weight_in_"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/exam_weight"
            android:layout_width="300dp"
            android:layout_height="wrap_content" 
            android:inputType="phone"
            android:hint="@string/In_percentage"/>
        

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Day"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/exam_day"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/date_example"
            android:inputType="date"/>
        
     <LinearLayout android:orientation="horizontal"
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	
	    <Button android:id="@+id/examen_save" 
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent" 
	        android:text="@string/Save"
	        android:layout_weight="1.0" />
	    
   </LinearLayout>
        
</LinearLayout>