<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_root"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dp"
>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_the_subject"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<EditText
	    android:id="@+id/name_subject_form"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textCapCharacters" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/number_of_exams"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText 
        android:id="@+id/number_exams_subject_form"
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="number"/>
    
    <LinearLayout android:orientation="horizontal"
	    android:background="@android:drawable/bottom_bar"
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	
	    <Button android:id="@+id/save" 
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent" 
	        android:text="@string/add"
	        android:layout_weight="1.0" />
	    
   </LinearLayout>
</LinearLayout>